<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    tools:context=".RegistrationActivity">


    <RelativeLayout
        android:id="@+id/upper_bg"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="17dp"

        android:background="@drawable/rounded_corners_all"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:gravity="center"
            android:text="@string/second_hello_string"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/data_field"
        android:layout_below="@id/upper_bg"
        android:layout_marginTop="120dp"
        android:layout_width="wrap_content"
        android:layout_height="355dp"

        android:layout_marginHorizontal="35dp"
        android:background="@drawable/rounded_corners_all"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/user_name_field"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="17dp"

            android:ems="10"

            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/user_name_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_bg"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/first_password_field"
            android:layout_width="match_parent"
            android:layout_below="@id/user_name_field"
            android:layout_height="65dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"

            android:ems="10"

            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_bg"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/second_password_field"
            android:layout_width="match_parent"
            android:layout_below="@id/first_password_field"
            android:layout_height="65dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"

            android:ems="10"

            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_bg"
            android:textSize="24sp" />

        <LinearLayout android:layout_below="@id/second_password_field"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="23dp"
                android:backgroundTint="@color/blue3"
                android:text="@string/create_account_button"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_bold"
                app:cornerRadius="15dp" />

            <RelativeLayout
                android:id="@+id/need_reg_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/is_account_exist_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="27dp"
                    android:text="@string/isnt_need_reg_button"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/blue_bg"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/go_log_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/is_account_exist_text"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="-4dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/go_log_button"
                    android:textColor="@color/white"


                    android:textSize="17sp" />
            </RelativeLayout>



        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_square"

        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/rounded_corners_up_white">

    </RelativeLayout>

</RelativeLayout>